src/css/components/avatar.css
@layer components {
  .elv-avatar {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-relative elv-flex elv-items-center elv-justify-center
        elv-border-2 elv-border-inverted elv-overflow-hidden;
    }
  }

  .elv-avatar--xl {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-size-21 elv-rounded-xl;
    }
  }

  .elv-avatar--lg {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-size-15 elv-rounded-full;
    }
  }

  .elv-avatar--md {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-size-11 elv-rounded-full;
    }
  }

  .elv-avatar--sm {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-size-9 elv-rounded-full;
    }
  }

  .elv-avatar--xs {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-size-7 elv-rounded-full;
    }
  }

  .elv-avatar__image {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-w-full elv-h-full;
      object-fit: cover;
      object-position: center;
      border-radius: inherit;
    }
  }

  .elv-avatar__initials {
    :where([elv]) &,
    &:where([elv]) {
      @apply elv-relative elv-flex elv-items-center elv-justify-center
        elv-w-full elv-h-full elv-bg-primary elv-text-inverted elv-font-semibold;
      border-radius: inherit;
    }
  }
}

